<resources>
    <string name="app_name">OurNDPSongs</string>
    <string name="insert">Insert</string>
    <string name="show_list">show list</string>
    <string name="enter_year_of_release_here">Enter year of release here</string>
    <string name="enter_singer_s_name_here">Enter Singer\'s name here</string>
    <string name="enter_song_title_here">Enter song title here</string>
    <string name="show_all_songs_with_5_star">Show All songs with 5 Star</string>
    <string name="song_id">Song ID</string>
    <string name="song_title">Song Title</string>
    <string name="singers">Singers</string>
    <string name="year">Year</string>
    <string name="stars">Stars</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string-array name="spn_items">
        <item>1998</item>
        <item>2002</item>
        <item>2015</item>
    </string-array>
</resources>